--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,14 @@ config.json
 
 # HAR文件（包含完整API请求数据）
 *.har
+# 但允许特定的分析用HAR文件
+!沃美下单完全步骤ct.womovie.cn_2025_06_29_20_14_18.har
+
+# HAR文件目录
+data/har_files/
+data/har_files/*
+har_files/
+har_files/*
 
 # 日志文件
 *.log
@@ -21,6 +29,27 @@ test_*.py
 *_test.py
 debug_*.py
 *_debug.py
+analyze_*.py
+check_*.py
+compare_*.py
+create_*.py
+extract_*.py
+generate_*.py
+simple_*.py
+comprehensive_*.py
+detailed_*.py
+corrected_*.py
+final_*.py
+fresh_*.py
+direct_*.py
+get_*.py
+cleanup_*.py
+verify_*.py
+scan_*.py
+diagnose_*.py
+curl_*.py
+har_*.py
+voucher_*.py
 
 # 临时文件
 temp/
@@ -36,6 +65,29 @@ __pycache__/
 # 票根文件夹
 ../票根/
 票根/
+
+# 中文文档和报告
+*指南.md
+*方案.md
+*总结.md
+*分析报告.md
+*实现报告.md
+*验证报告.md
+*差异分析*.md
+*技术分析*.md
+*完整性分析*.md
+*流程*.md
+
+# 虚拟环境
+.venv/
+venv/
+env/
+.env/
+
+# Node.js相关
+node_modules/
+package-lock.json
+yarn.lock
 
 # 系统文件
 .DS_Store
