feat: 移除大文件夹user-feedback-mcp，优化项目结构
- 删除user-feedback-mcp目录（包含大量第三方依赖）
- 更新.gitignore配置，防止大文件夹意外提交
- 减少项目体积，专注核心功能
- 保持分析用HAR文件供技术研究

--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,11 @@ node_modules/
 package-lock.json
 yarn.lock
 
+# 第三方项目和大文件夹
+user-feedback-mcp/
+*-mcp/
+remote-*/
+
 # 系统文件
 .DS_Store
 Thumbs.db
