--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,11 @@ WOMEI_CINEMA_ID=400303
 # 获取方式：通过沃美小程序抓包获得
 WOMEI_TOKEN=your_token_here
 
+# 管理API配置
+# --------
+# 管理API服务器地址（用于机器码验证等功能）
+ADMIN_API_BASE_URL=http://localhost:5000
+
 # 测试配置
 # --------
 # 测试用手机号（建议使用虚拟号码）
